Fixed Spacing of Content Issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   text-align: center;
   display: grid;
+  grid-template-columns: 1fr 300px;
 }
 
