--- a/src/components/comments/comments.css
+++ b/src/components/comments/comments.css
@@ -2,4 +2,5 @@
     box-shadow: 5px 5px 12px lightgray;
     margin: 10px;
     padding: 9px;
+    display: grid;
 }
